--- a/src/Components/CSS/Header.css
+++ b/src/Components/CSS/Header.css
@@ -59,13 +59,101 @@
     cursor: pointer;
 }
 
+#basket-size{
+    margin-left: -35px;
+    text-align: center;
+}
+
 #basket-container {
-    position: fixed;
-    z-index: 998;
-    width: 350px;
-    min-height: 100%;
-    top: 80px;
-    right: 0;
-    background-color: #a6607c;
-    ;
+    overflow-x: auto;
+    max-height: 90vh;
+    margin: 0 auto;
+    width: 700px;
+    background-color: #eee2dc;
+    border: 3px solid #542f34;
+    padding: 20px;
+}
+
+.basket-item{
+    display: flex;
+    justify-content: space-between;
+    height: 200px;
+    padding: 10px 0;
+    border-bottom: 1px solid black;
+}
+
+.basket-item img {
+    width: 125px;
+    height: 175px;
+}
+
+.basket-item h2 {
+    text-decoration: underline;
+}
+
+.basket-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    color: black;
+}
+
+.basket-button {
+    width: 150px;
+    height: 40px;
+    margin: 0 50px;
+    background-color:#a6607c;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    border:none;
+    color: white;
+    text-shadow: #000 0px 0px 2px;
+}
+
+#checkout-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#checkout-container h2{
+    padding: 5px;
+    border: 1px solid black;
+}
+
+
+#meme-container {
+    position: absolute;
+    margin-left: -40%;
+    z-index: 999;
+    height: 700px;
+    background-color: #eee2dc;
+    border: 4px solid #a6607c;
+    padding: 20px;
+    font-size: 28px;
+    text-align: center;
+}
+
+#meme-container img {
+    height: 500px;
+}
+
+#meme-container button {
+    width: 150px;
+    height: 50px;
+    margin: 0 10px;
+    background-color:#a6607c;
+    font-size: 20px;
+    color: white;
+    text-shadow: #000 0px 0px 2px;
+    font-weight: 500;
+    cursor: pointer;
+    border:none;
+}
+#meme-container button:hover{
+    background-color: #542f34;
 }
