--- a/src/Components/CSS/Shop.css
+++ b/src/Components/CSS/Shop.css
@@ -1,7 +1,7 @@
 #shop-sidebar {
     position: fixed;
     margin-top: -50px;
-    z-index: 999;
+    z-index: 99;
     display: flex;
     flex-direction: row;
     height: 30px;
@@ -54,7 +54,9 @@
 .display-card {
     position: relative;
     margin:2px;
-    width: 19%; 
+    width: 19%;
+    min-width: 275px; 
+    min-height: 480px;
     max-height: 520px;
     cursor: pointer;
     font-size: 0px;
