--- a/src/Components/CSS/ItemPage.css
+++ b/src/Components/CSS/ItemPage.css
@@ -68,6 +68,7 @@
 
 #buy-row button {
     align-self: center;
+    margin-top: 60px;
     min-width: 300px;
     height: 75px;
     font-size: 40px;
